--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "angular-i18n": "^1.6.4",
     "angular-ui-router": "^0.4.2",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "tr-ng-grid": "^3.1.7"
   },
   "repository": {
     "type": "git",
