--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "angular-ui-router": "^0.4.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "ngstorage": "^0.3.11",
     "tr-ng-grid": "^3.1.7"
   },
   "repository": {
