--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular": "^1.6.4",
     "angular-i18n": "^1.6.4",
     "angular-loading-bar": "^0.9.0",
+    "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
