--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-i18n": "^1.6.4",
+    "angular-input-masks": "^2.5.0",
     "angular-loading-bar": "^0.9.0",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
