--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular-loading-bar": "^0.9.0",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
+    "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "ngstorage": "^0.3.11",
