--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^3.3.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8"
@@ -30,6 +31,7 @@
     "angular-ui-router": "^0.4.2",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
+    "gulp-angular-embed-templates": "^2.3.0",
     "jquery": "^3.2.1",
     "ngstorage": "^0.3.11",
     "tr-ng-grid": "^3.1.7"
