--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Stavros Kortesas",
   "license": "ISC",
   "devDependencies": {
+    "angular-mocks": "^1.6.4",
     "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
     "gulp-angular-templatecache": "^2.0.0",
@@ -20,7 +21,12 @@
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8"
+    "gulp-util": "^3.0.8",
+    "jasmine-core": "^2.6.3",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-read-json": "^1.1.0"
   },
   "dependencies": {
     "angular": "^1.6.4",
